# Postgres-dumper

./: .gitignore  HEADINGS_FORMAT_TEST.md  README.md  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/connection/: ConnectionSetup.tsx
src/components/data-input/: DataInputArea.tsx  SmartPasteZone.tsx
src/components/layout/: MainLayout.tsx  NavigationSidebar.tsx  StatusBar.tsx  Workspace.tsx
src/components/mapping/: ColumnMapper.tsx  MissingColumns.tsx  ValidationPanel.tsx
src/components/ui/: SmartTextarea.tsx
src/lib/: utils.ts
src/lib/generators/: sqlGenerator.ts
src/lib/parsers/: csvParser.ts  formatDetector.ts  jsonParser.ts  markdownParser.ts
src/stores/: sessionStore.ts
src/types/: index.ts
