[package]
name = "postgres-dumper"
version = "0.1.0"
description = "A Tauri App"
authors = ["zeka"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "postgres_dumper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# For Windows-specific features, ensure in Cargo.toml:
[target.'cfg(windows)'.dependencies]
native-tls = "0.2"
